<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_bg"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/_5sdp"
        android:id="@+id/linear1">

        <ImageView
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_20sdp"
            android:id="@+id/backArrow"
            app:srcCompat="@drawable/arrow_back_white"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:contentDescription="@string/back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_6sdp"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_95sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/avatar"
            app:civ_border_color="@color/darkGray"
            app:civ_border_width="@dimen/_2sdp" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="@dimen/_21sdp"
            android:layout_height="@dimen/_21sdp"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_minus24sdp"
            android:src="@drawable/plus"
            android:contentDescription="@string/upload_profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_9sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_85sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input1"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/chat_background1"
                android:textSize="@dimen/_13ssp"
                android:autofillHints="name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_85sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/etStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input1"
                android:hint="@string/about"
                android:inputType="textPersonName"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/chat_background1"
                android:textSize="@dimen/_13ssp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="@dimen/_51sdp"
            android:layout_height="@dimen/_31sdp"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:background="@drawable/btn_bg"
            android:backgroundTint="@color/purple_500"
            android:padding="@dimen/_4sdp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/linear_bg"
        android:orientation="vertical"
        android:padding="@dimen/_25sdp">

        <TextView
            android:id="@+id/txtPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:drawablePadding="@dimen/_19sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_privacy" />

        <TextView
            android:id="@+id/txtAboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:drawablePadding="@dimen/_19sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/about" />

        <TextView
            android:id="@+id/txtInviteFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:drawablePadding="@dimen/_18sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/invite_a_friend"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_invite" />

        <TextView
            android:id="@+id/txtNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:drawablePadding="@dimen/_18sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_notification" />

        <TextView
            android:id="@+id/txtHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:drawablePadding="@dimen/_18sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_help" />


    </LinearLayout>


</RelativeLayout>