<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/sign_in_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/_16sdp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/we_chat_icon"
            android:layout_marginBottom="@dimen/_10sdp"
            android:contentDescription="@string/todo" />
        <EditText
            android:id="@+id/edtSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:padding="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:drawablePadding="@dimen/_9sdp"
            android:drawableStart="@drawable/custom_email_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:textColor="@color/black"
            android:textColorHint="@color/chat_background1"
            android:autofillHints="emailAddress" />
            <EditText
                android:id="@+id/edtSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_lock_icon"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/chat_background1"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:padding="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawablePadding="@dimen/_9sdp"
                android:autofillHints="password" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="@dimen/_1sdp"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_4sdp"/>

            <TextView
                android:id="@+id/txtClickSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:gravity="end"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_gravity="end"/>
        </LinearLayout>


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_44sdp"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_6sdp"
            android:backgroundTint="@color/blue"
            android:text="@string/sign_in"
            android:textAllCaps="false" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                app:cornerRadius="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:padding="@dimen/_12sdp"
                android:backgroundTint="@color/white"
                tools:ignore="ButtonStyle,RtlHardcoded" />
            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_facebook"
                android:backgroundTint="@color/fb_color"
                android:text="@string/facebook"
                android:padding="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:textSize="@dimen/_13ssp"
                app:cornerRadius="@dimen/_8sdp"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle,RtlHardcoded" />

        </LinearLayout>
        <TextView
            android:id="@+id/txtSignUpWithPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:text="@string/sign_up_with_number"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/white"/>

    </LinearLayout>



</LinearLayout>