<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/w4"
    tools:context=".ChatDetailsActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear"
        android:layout_below="@+id/toolBar"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/linear">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/enterMessage"
            android:ems="10"
            android:background="@drawable/bg_et_message"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:padding="@dimen/_10sdp"
            android:hint="@string/message"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/send"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:layout_marginLeft="@dimen/_1sdp"
            android:layout_marginRight="@dimen/_1sdp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_send"
            android:contentDescription="@string/send" />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:flow_verticalBias="0.476"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/arrow_back_white"
                android:contentDescription="@string/back" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/avatar"
                app:civ_border_color="@color/black"
                app:civ_border_width="@dimen/_1sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/backArrow"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/callImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_11sdp"
                android:src="@drawable/ic_call"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/videoCallImageView"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/voice_call" />

            <ImageView
                android:id="@+id/videoCallImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_9sdp"
                android:src="@drawable/ic_video_call"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/menuImageView"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/video_call" />

            <ImageView
                android:id="@+id/menuImageView"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:src="@drawable/ic_menu1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/more_options" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

</RelativeLayout>